--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "mini-css-extract-plugin": "0.11.3",
     "mobx": "^6.2.0",
     "mobx-react": "^7.1.0",
+    "node-sass": "^5.0.0",
     "optimize-css-assets-webpack-plugin": "5.0.4",
     "pnp-webpack-plugin": "1.6.4",
     "postcss-flexbugs-fixes": "4.2.1",
